# limitador

./: .dockerignore  .gitignore  .gitmodules  ADOPTERS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.common  Dockerfile.ppc64le  Dockerfile.s390x  LICENSE  MAINTAINERS.md  README.md  RELEASE.md  build.rs
.github/: release.yml
.github/actions/build-image/: action.yaml
.github/workflows/: bench.yml  build-image.yaml  build-multi-arch-image.yaml  coverage.yml  e2e.yaml  issues-workflow.yaml  license-scan.yaml  release-image.yaml  release.yaml  rust.yml
benches/: bench.rs
doc/: how-it-works.md  topologies.md
doc/migrations/: conditions.md
doc/server/: configuration.md
examples/: envoy.yaml
limitador/: CHANGELOG.md  Cargo.toml  README.md  build.rs
limitador-envoy-rls/: Cargo.toml
limitador-envoy-rls/src/: main.rs
limitador-envoy-rls/src/protobufs/: envoy.api.v2.core.rs
limitador-http-server/: Cargo.toml
limitador-http-server/src/: main.rs  request_types.rs
limitador-server/: CHANGELOG.md  Cargo.toml  README.md  build.rs  default.profraw
limitador-server/docs/: configuration.md  http_server_spec.json  sandbox.md
limitador-server/e2e/file-watcher/: configmap.yaml  configmap_updated.yaml  deployment.yaml  service.yaml  watch-env.sh  watch-pod-resource.sh
limitador-server/examples/: envoy.yaml  limits.yaml
limitador-server/kubernetes/: README.md  kuard-deployment.yaml  kuard-envoy-config-configmap.yaml  limitador-deployment.yaml  limitador-grafanadashboard.json
limitador-server/proto/: kuadrantrls.proto
limitador-server/sandbox/: .gitignore  Makefile  README.md  docker-compose-envoy-3-node.yaml  docker-compose-envoy.yaml  docker-compose-limitador-disk.yaml  docker-compose-limitador-distributed-3-node.yaml  docker-compose-limitador-distributed.yaml  docker-compose-limitador-infinispan.yaml  docker-compose-limitador-memory.yaml  docker-compose-limitador-redis-cached.yaml  docker-compose-limitador-redis-otel.yaml  docker-compose-limitador-redis-tls.yaml  docker-compose-limitador-redis.yaml  envoy.yaml  envoy2.yaml  envoy3.yaml  limits.yaml  load-test.json
limitador-server/sandbox/loadtest/: Cargo.toml
limitador-server/sandbox/loadtest/src/: main.rs
limitador-server/sandbox/redis-otel/: README.md
limitador-server/sandbox/redis-tls/: README.md  redis-config.conf
limitador-server/script/: kind-cluster.yaml  kind-setup.sh
limitador-server/src/: config.rs  main.rs  metrics.rs  prometheus_metrics.rs
limitador-server/src/envoy_rls/: envoy_types.rs  kuadrant_service.rs  mod.rs  server.rs
limitador-server/src/envoy_rls/protobufs/: envoy.config.core.v3.rs  envoy.extensions.common.ratelimit.v3.rs  envoy.r#type.v3.rs  envoy.service.ratelimit.v2.rs  envoy.service.ratelimit.v3.rs  udpa.annotations.rs  validate.rs  xds.annotations.v3.rs  xds.core.v3.rs
limitador-server/src/http_api/: mod.rs  request_types.rs  server.rs
limitador/benches/: bench.rs
limitador/proto/: distributed.proto
limitador/src/: counter.rs  errors.rs  lib.rs  limit.rs  prometheus_metrics.rs
limitador/src/limit/: cel.rs
limitador/src/storage/: atomic_expiring_value.rs  batcher.rs  expiring_value.rs  in_memory.rs  keys.rs  mod.rs  redis.rs  redis_async.rs  redis_cached.rs  wasm.rs
limitador/src/storage/disk/: expiring_value.rs  mod.rs  rocksdb_storage.rs  sled_storage.rs
limitador/src/storage/distributed/: cr_counter_value.rs  mod.rs
limitador/src/storage/distributed/grpc/: mod.rs
limitador/src/storage/infinispan/: counters.rs  dist_lock.rs  infinispan_storage.rs  mod.rs  response.rs  sets.rs
limitador/src/storage/redis/: batcher.rs  counters_cache.rs  mod.rs  redis_async.rs  redis_cached.rs  redis_keys.rs  redis_lenient.rs  redis_sync.rs  scripts.rs
limitador/src/storage/sled/: expiring_value.rs  mod.rs  sled_storage.rs
limitador/tests/: integration_tests.rs
limitador/tests/helpers/: mod.rs  tests_limiter.rs
src/: counter.rs  envoy.rs  envoy_rls.rs  errors.rs  http_server.rs  lib.rs  limit.rs  server.rs
src/protobufs/: envoy.service.ratelimit.v3.rs  validate.rs
src/storage/: in_memory.rs  mod.rs  redis.rs  wasm.rs
tests/: integration_tests.rs
