[package]
name = "limitador"
version = "0.1.0"
authors = ["David Ortiz <z.david.ortiz@gmail.com>"]
edition = "2018"

# We make some features optional to be able to compile for wasm32.
[features]
default = ["redis", "envoy_rls"]
redis_storage = ["redis"]
envoy_rls = ["tokio", "tonic", "prost", "prost-types"]

[dependencies]
ttl_cache = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
thiserror = "1.0"

# Optional dependencies
redis = { version = "0.16", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
tonic = { version = "0.2", optional = true }
prost = { version = "0.6", optional = true }
prost-types = { version = "0.6", optional = true }

[build-dependencies]
tonic-build = "0.2"

[dev-dependencies]
serial_test = "*"

[[bin]]
name = "ratelimit-server"
path = "src/server.rs"
