[package]
name = "limitador"
version = "0.1.0"
authors = ["David Ortiz <z.david.ortiz@gmail.com>"]
license = "Apache 2.0"
description = "Rate limiter."
homepage = "https://github.com/3scale/limitador"
repository = "https://github.com/3scale/limitador"
documentation = "https://github.com/3scale/limitador"
readme = "README.md"
edition = "2018"

# We make some features optional to be able to compile for wasm32.
[features]
default = ["redis_storage", "envoy_rls", "http_server"]
redis_storage = ["redis"]
envoy_rls = ["tokio", "tonic", "prost", "prost-types"]
http_server = ["actix-web", "actix-rt", "paperclip"]

[dependencies]
ttl_cache = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
thiserror = "1.0"

# Optional dependencies
redis = { version = "0.16", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
tonic = { version = "0.2", optional = true }
prost = { version = "0.6", optional = true }
prost-types = { version = "0.6", optional = true }
actix-web = { version = "2.0", optional = true }
actix-rt = { version = "1.0", optional = true }
paperclip = { version = "0.4", features = ["actix"], optional = true }

[build-dependencies]
tonic-build = "0.2"

[dev-dependencies]
serial_test = "*"
criterion = "0.3"
paste = "0.1"

[[bin]]
name = "envoy-rls"
path = "src/envoy_rls.rs"

[[bin]]
name = "http-server"
path = "src/http_server.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
