[package]
name = "limitador-envoy-rls"
version = "0.1.0"
authors = ["David Ortiz <z.david.ortiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limitador = { path = "../limitador" }
tokio = { version = "0.2", features = ["full"] }
tonic = { version = "0.2" }
prost = { version = "0.6" }
prost-types = { version = "0.6" }
serde_yaml = "0.8"

[build-dependencies]
tonic-build = "0.2"
