[package]
name = "limitador-envoy-rls"
version = "0.1.0"
authors = ["David Ortiz <z.david.ortiz@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limitador = { path = "../limitador" }
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.7"

[build-dependencies]
tonic-build = "0.2"
