[package]
name = "limitador-http-server"
version = "0.1.0"
authors = ["David Ortiz <z.david.ortiz@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limitador = { path = "../limitador" }
actix-web = { version = "2.0" }
actix-rt = { version = "1.0" }
paperclip = { version = "0.4", features = ["actix"] }
serde = { version = "1.0", features = ["derive"] }
