[package]
name = "limitador-server"
version = "2.0.0-dev"
authors = ["Alex Snaps <asnaps@redhat.com>", "Eguzki Astiz Lezaun <eguzki@redhat.com>", "David Ortiz <z.david.ortiz@gmail.com>"]
license = "Apache-2.0"
keywords = ["rate-limiting", "rate", "limiter", "envoy", "rls"]
categories = ["web-programming"]
description = "Rate limiting service that integrates with Envoy's RLS protocol"
homepage = "https://kuadrant.io"
repository = "https://github.com/kuadrant/limitador"
documentation = "https://kuadrant.io/docs/limitador"
readme = "README.md"
edition = "2021"

[features]
distributed_storage = ["limitador/distributed_storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limitador = { path = "../limitador", features = ['lenient_conditions'] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tonic = "0.12"
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"
serde_yaml = "0.9"
log = "0.4"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.3", features = ["trace"] }
opentelemetry-otlp = "0.15"
url = "2"
actix-web = "4.1"
actix-rt = "2"
paperclip = { version = "0.8.0", features = ["actix4"] }
serde = { version = "1", features = ["derive"] }
notify = "6.0.1"
const_format = "0.2.31"
lazy_static = "1.4.0"
clap = "4.3"
sysinfo = "0.30.10"
openssl = { version = "0.10.66", features = ["vendored"] }
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"


[build-dependencies]
tonic-build = "0.11"
