[package]
name = "limitador"
version = "0.5.0-dev"
authors = ["David Ortiz <z.david.ortiz@gmail.com>", "Eguzki Astiz Lezaun <eguzki@redhat.com>", "Alex Snaps <asnaps@redhat.com>"]
license = "Apache-2.0"
keywords = ["rate-limiting", "rate", "limiter"]
categories = ["web-programming"]
description = "Rate limiting library"
homepage = "https://kuadrant.io"
repository = "https://github.com/kuadrant/limitador"
documentation = "https://docs.rs/limitador"
readme = "README.md"
edition = "2021"

# We make redis and infinispan optional to be able to compile for wasm32.
[features]
default = ["disk_storage", "redis_storage"]
disk_storage = ["rocksdb"]
redis_storage = ["redis", "r2d2", "tokio"]
infinispan_storage = ["infinispan", "reqwest", "base64"]
lenient_conditions = []

[dependencies]
moka = "0.11.2"
getrandom = { version = "0.2", features = ["js"] }
ttl_cache = "0.5"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.0.4", features = ["use-std"] }
serde_json = "1"
rmp-serde = "1.1.0"
thiserror = "1"
futures = "0.3"
async-trait = "0.1"
cfg-if = "1"
prometheus = "0.13"
lazy_static = "1"

# Optional dependencies
rocksdb = { version = "0.21.0", optional = true, features = ["multi-threaded-cf"] }
redis = { version = "0.23.1", optional = true, features = [
    "connection-manager",
    "tokio-comp",
] }
r2d2 = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
] }
infinispan = { version = "0.3", optional = true }
reqwest = { version = "0.11", optional = true }
base64 = { version = "0.21.0", optional = true }

[dev-dependencies]
serial_test = "2.0.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
paste = "1"
rand = "0.8"
tempfile = "3.5.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
] } # wasm_storage tests use tokio::test

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
